# lyricade

./: .env  .gitignore  Cargo.toml  LICENSE  Packager.toml  README.md  build.rs  cargo-sources.json  codebook.toml  diesel.toml  io.github.weiteck.Lyricade.dev.yml  io.github.weiteck.Lyricade.yml  rustfmt.toml
.github/workflows/: release.yml
data/: icons.gresource.xml  io.github.weiteck.Lyricade.desktop  io.github.weiteck.Lyricade.metainfo.xml  io.github.weiteck.Lyrinc.desktop  resources.gresource.xml  style.css
migrations/2026-03-07-051608_init/: up.sql
src/: lib.rs  library.rs  lrclib.rs  lyrics.rs  main.rs  manage.rs  schema.rs  settings.rs  tags.rs  track.rs  ui.rs  util.rs
src/lyrics/: lrc.rs  lyrics_line.rs
src/ui/: about.rs  app.rs  manage.rs  mod.rs  prefs.rs  settings.rs  table.rs  tracks_table.rs  view_lyrics.rs  viewer.rs
src/ui/app/: get_lyrics_menu.rs  main_menu.rs  track_stats.rs
src/ui/prefs/: library_row.rs
src/ui/view_lyrics/: line.rs  view_lyrics_line.rs
src/ui/viewer/: line.rs  player.rs  tag.rs
src/util/: reporter.rs
ui/: app-window.slint
