[package]
edition = "2024"
name = "lyricade"
version = "0.1.0"
description = "Manage and download lyrics for your music library"
repository = "https://github.com/weiteck/lyricade"
license = "MIT"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0"
bon = "3.9"
camino = { version = "1.2", features = ["serde1"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
derive-where = "1.6"
diesel = { version = "2.3", features = [
  "chrono",
  "r2d2",
  "returning_clauses_for_sqlite_3_35",
  "sqlite",
] }
diesel_migrations = { version = "2.3", features = ["sqlite"] }
directories = "6.0"
futures = "0.3"
leaky-bucket = { version = "1.1", features = ["tracing"] }
libsqlite3-sys = { version = "0.37", features = ["bundled"] }
lofty = "0.24"
mimalloc = "0.1"
rand = "0.10"
regex = "1.12"
relm4 = { version = "0.11", features = ["gnome_45", "libadwaita"] }
relm4-components = { version = "0.11", features = ["libadwaita"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"

[build-dependencies]
glib-build-tools = "0.22.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
